added: can changes, get lit and other changes

--- a/about/index.html
+++ b/about/index.html
@@ -50,18 +50,24 @@
     <!--=============== HEADER ===============-->
     <header class="header" id="header">
       <nav class="nav container">
-        <a href="/" class="nav__logo">
+        <a href="#" class="nav__logo">
           <img
             src="../assets/img/zatch-logo.svg"
             class="nav__logo__img"
             alt=""
           />
+          <p class="nav__logo__text">Get Lit</p>
         </a>
 
         <div class="nav__menu" id="nav-menu">
           <ul class="nav__list">
             <li class="nav__item">
               <a href="/" class="nav__link active-link">Home</a>
+            </li>
+            <li class="nav__item">
+              <a href="https://www.amazon.com/" class="nav__link active-link"
+                >Buy</a
+              >
             </li>
           </ul>
 
