--- a/index.html
+++ b/index.html
@@ -52,12 +52,18 @@
       <nav class="nav container">
         <a href="#" class="nav__logo">
           <img src="assets/img/zatch-logo.svg" class="nav__logo__img" alt="" />
+          <p class="nav__logo__text">Get Lit</p>
         </a>
 
         <div class="nav__menu" id="nav-menu">
           <ul class="nav__list">
             <li class="nav__item">
               <a href="/about" class="nav__link active-link">About</a>
+            </li>
+            <li class="nav__item">
+              <a href="https://www.amazon.com/" class="nav__link active-link"
+                >Buy</a
+              >
             </li>
           </ul>
 
@@ -232,7 +238,7 @@
         </div>
       </section>
 
-      <!--=============== CASE ===============-->
+      <!--=============== About ===============-->
       <section class="case section grid" id="case">
         <h2 class="section__title specs__main__title">Zatch Energy</h2>
 
