--- a/about/index.html
+++ b/about/index.html
@@ -65,6 +65,9 @@
               <a href="/" class="nav__link active-link">Home</a>
             </li>
             <li class="nav__item">
+              <a href="/contact" class="nav__link active-link">Contact</a>
+            </li>
+            <li class="nav__item">
               <a href="https://www.amazon.com/" class="nav__link active-link"
                 >Buy</a
               >
