--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
               <a href="/about" class="nav__link active-link">About</a>
             </li>
             <li class="nav__item">
+              <a href="/contact" class="nav__link active-link">Contact</a>
+            </li>
+            <li class="nav__item">
               <a href="https://www.amazon.com/" class="nav__link active-link"
                 >Buy</a
               >
