--- a/contact/index.html
+++ b/contact/index.html
@@ -73,8 +73,8 @@
 
     <!--=============== HEADER ===============-->
     <header class="header" id="header">
-      <nav class="nav container">
-        <a href="#" class="nav__logo">
+      <nav class="nav">
+        <a href="../" class="nav__logo">
           <img
             src="../assets/img/zatch-logo.svg"
             class="nav__logo__img"
