--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <body>
     <!--=============== HEADER ===============-->
     <header class="header" id="header">
-      <nav class="nav container">
+      <nav class="nav">
         <a href="#" class="nav__logo">
           <img src="assets/img/zatch-logo.svg" class="nav__logo__img" alt="" />
           <p class="nav__logo__text">Get Lit</p>
