--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
         </div>
 
         <div class="product">
-          <div class="soda" style="--url: url(/assets/img/drink1.jpg)"></div>
-          <div class="soda" style="--url: url(/assets/img/drink2.jpg)"></div>
+          <div class="soda" style="--url: url(/assets/img/drink1.png)"></div>
+          <div class="soda" style="--url: url(/assets/img/drink2.png)"></div>
         </div>
 
         <div class="rock">
@@ -108,11 +108,8 @@
       <section class="section drinks">
         <div class="carousel">
           <div class="list">
-            <div
-              class="item active"
-              style="--background: hsl(var(--hue-color), 4%, 4%)"
-            >
-              <div class="content">Zero Sugar</div>
+            <div class="item active" style="--background: #ea3d41">
+              <div class="content">Strawberry</div>
               <img
                 src="/assets/img/carousel-img/fruit_strawberry.png"
                 class="fruit"
@@ -125,16 +122,9 @@
                 class="fruit"
               />
             </div>
-            <div class="item" style="--background: #ea3d41">
-              <div class="content">Strawberry</div>
-              <img
-                src="/assets/img/carousel-img/fruit_strawberry.png"
-                class="fruit"
-              />
-            </div>
           </div>
           <div class="leaves"></div>
-          <div class="mockup"></div>
+          <div class="mockup drink1 animate__animated"></div>
           <div class="shadow"></div>
           <div class="arrow">
             <button id="prev"><</button>
@@ -186,7 +176,7 @@
           <div>
             <div
               class="specs__img specs__img__drinks"
-              style="--url: url(/assets/img/drink1.jpg)"
+              style="--url: url(/assets/img/drink1.png)"
             ></div>
           </div>
         </div>
@@ -235,14 +225,14 @@
           <div>
             <div
               class="specs__img specs__img__drinks"
-              style="--url: url(/assets/img/drink2.jpg)"
+              style="--url: url(/assets/img/drink2.png)"
             ></div>
           </div>
         </div>
       </section>
 
       <!--=============== About ===============-->
-      <section class="case section grid" id="case">
+      <!-- <section class="case section grid" id="case">
         <h2 class="section__title specs__main__title">Zatch Energy</h2>
 
         <div class="case__container container grid">
@@ -264,7 +254,7 @@
             </a>
           </div>
         </div>
-      </section>
+      </section> -->
     </main>
 
     <!--=============== FOOTER ===============-->
